# deepwiki

./: .dockerignore  .env.docker  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile-ollama-local  Ollama-instruction.md  README.md  WARP.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  run-tests.sh  run.sh  start_backend.sh
.github/: copilot-instructions.md
.github/chatmodes/: planner.chatmode.md  prd.chatmode.md
.github/workflows/: README.md  deepwiki-ci.yml  (+1 more)
api/: api.py  app.py  config.py  data_pipeline.py  main.py  rag.py  requirements.txt  simple_chat.py  simple_chat_new.py  simple_chat_service.py  websocket_wiki.py
backend/: README.md  __init__.py  app.py  container.py  logging_config.py  main.py
docs/: FRONTEND_REFACTORING_PLAN.md  minimal-multi-repository-implementation-plan.md  multiple-repositories-implementation-plan-corrected.md  multiple-repositories-implementation-plan-langchain.md  multiple-repositories-implementation-plan.md  restructure-api-implementation-plan.md
memory-bank/: README.md  activeContext.md  instructions.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  task-list.md  techContext.md
src/: README.md
test/: README.md  conftest.py  test_api.py  test_chat_pipeline.py  test_chat_service.py  test_core_infrastructure.py  test_embedder_components.py  test_extract_repo_name.py  test_generator_components.py  test_project_service.py  test_rag_pipeline.py  test_retriever_components.py  test_vector_operations.py
tools/: README.md  validate_imports.py
(+321 files in other folders)
